[tool.poetry]
name = "damn"
version = "0.3.0"
description = "Django asset dependency management."
authors = ["Curtis Maloney <curtis@tinbrain.net>"]
license = "MIT"
keywords = ["django", "assets"]
homepage = "https://github.com/funkybob/django-amn"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
